<resources>
    <string name="app_name">App name</string>
    <string name="category_feed">Feed</string>
    <string name="category_complain">Complain</string>
    <string name="category_services">Service</string>
    <string name="category_MyFlat">My Flat</string>
    <string name="category_booking">Book</string>
    <string name="category_sign_out">Sign Out</string>
    <string name="category_help">Helpdesk</string>
    <string name="category">Category</string>
    <string name="issue_type">Issue Type</string>
    <string name="personal">Personal</string>
    <string name="community">Community</string>
    <string name="phone">Phone Number</string>
    <string name="title">Title</string>
    <string name="description">Description(optional)</string>
    <string name="issue">Issue</string>
    <string name="action_save">Save</string>
    <string name="plumber">Plumber</string>
    <string name="electrician">Electrician</string>
    <string name="lift">Lift</string>
    <string name="clean">DryClean</string>
    <string name="car">CarWash</string>
    <string name="milk">Milk</string>
    <string name="paper">NewsPaper</string>
    <string name="maid">Maid</string>
    <string name="add_complain">Add your first Complain</string>
    <string name="complain">Do not worry!</string>
    <string name="action_delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="lodge">Lodge Your Complain</string>
    <string name="edit_complain">Edit Complain</string>
    <string name="editor_update_failed">Error updating the complain</string>
    <string name="editor_update_successful">Complain updated successfully</string>
    <string name="editor_insert_failed">Error lodging a complain</string>
    <string name="editor_insert_successful">Complain made successfully</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="unknown_description">No Description</string>
    <string name="discard">Discard</string>
    <string name="editor_activity_title_new_complain">Lodge a Complain</string>
    <string name="editor_activity_title_edit_complain">Edit Complain</string>
    <string name="keep_editing">Keep Editing</string>\
    <string name="editor_delete_failed">Error in deleting complain</string>
    <string name="editor_delete_successful">Complain deleted</string>
    <string name="delete_dialog_msg">Delete this complain?</string>
    <string name="editor_insert_complain_successful">Complain saved</string>
    <string name="editor_delete_complain_successful">Complain deleted</string>
    <string name="editor_delete_complain_failed">Error with deleting complain</string>
    <string name="editor_insert_complain_failed">Error with saving complain</string>
    <string name="editor_update_complain_successful">Complain updated</string>
    <string name="editor_update_complain_failed">Error with updating complain</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed to Book</string>
    <string name="event">Event Description</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="flat">MyFlat</string>
    <string name="pay">Proceed To Pay</string>
    <string name="cost">COST</string>
    <string name="club">Club House</string>
    <string name="guest">Guest House</string>
    <string name="hall">Community Hall</string>
    <string name="confirm_book">Confirm Booking</string>
</resources>
