<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout

    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:elevation="16dp">
    <TextView
        android:id="@+id/hall"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/hall"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"/>
        <View
            android:id="@+id/view1"
            android:background="@drawable/scrim3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:alpha="0.7"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:elevation="16dp">
    <TextView
        android:id="@+id/club"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/club"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"/>
        <View
            android:id="@+id/view2"
            android:background="@drawable/scrim1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:alpha="0.7"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:elevation="16dp">
    <TextView
        android:id="@+id/guest"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="@string/guest"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"/>
    <View
        android:id="@+id/view3"
        android:background="@drawable/scrim4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:alpha="0.7"/>
</FrameLayout>
    </LinearLayout>
    </ScrollView>
